# l1t

./: .SRCINFO  .ccls  .gitignore  CONTRIBUTING.md  Cargo.toml  LEVEL_DESIGN.md  PKGBUILD  README.md  REPO.md  makefile  test_level.l1t
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: rust-binaries.yml  rust-build.yml  rust-cargo-publish.yml
design/: logo.txt
docs/: CONFIGURATION.md  CONTRIBUTING.md  LEVELS.md
examples/repo/: l1t
examples/repo/levels/: test_level1.l1t  test_level2.l1t  test_level3.l1t
levels/: 0.l1t  1.l1t  2.l1t  3.l1t  4.l1t
src/: colors.c  colors.h  config.c  config.h  controls.rs  direction.rs  l1t.c  l1t.h  level.rs  levels.c  levels.h  lib.rs  main.c  main.rs  menu.rs  menus.c  menus.h  node.c  node.h  node.rs  repository.rs  userdata.rs  utils.c  utils.h
src/l1t/: direction.rs  level.rs  menu.rs  menu.rs.old  mod.rs  node.rs
src/levels/: 000.l1t  001.c  001.l1t  README.md
