[package]
name = "l1t"
version = "0.0.1"
edition = "2021"
description = "A terminal strategy game about shooting lasers and lighting statues"
license-file = "LICENSE"
homepage = "https://github.com/alex-laycalvert/l1t"
repository = "https://github.com/alex-laycalvert/l1t"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
crossterm = "0.26.1"
home = "0.5.4"
human-sort = "0.2.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
