[package]
name = "l1t"
version = "0.1.1"
edition = "2021"
authors = ["Alex Lay-Calvert"]
description = "A terminal strategy game about shooting lasers and lighting statues"
license = "GPLv3"
homepage = "https://github.com/alex-laycalvert/l1t"
repository = "https://github.com/alex-laycalvert/l1t"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
crossterm = "0.26.1"
home = "0.5.4"
human-sort = "0.2.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
